Add blogs to navbar

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,6 +2,7 @@
 const navItems = [
   { title: "About Me", url: "/" },
   { title: "Projects", url: "/projects" },
+  { title: "Blogs", url: "https://blog.kiranpk.dev"}
   // { title: "Initiatives", url: "/initiatives" },
 ];
 ---
